--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -54,6 +54,7 @@ nav {
 }
 
 body {
+    font-size: 1.2em;
     color: aliceblue;
     background-color: #413a4a;
     background-image: url("data:image/svg+xml,%3Csvg width='30' height='30' viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 10h10v10H0V10zM10 0h10v10H10V0z' fill='%232b292e' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");;
