--- a/theme/css/pymdown.css
+++ b/theme/css/pymdown.css
@@ -3,8 +3,7 @@
   padding: 10px 15px;
   margin: 2em 2em;
   border-radius: 4px;
-  font-family: sans-serif;
-    box-shadow: 4px 4px #000000;
+    box-shadow: 8px 8px #000000;
     background-color: #36303a;
 }
 .admonition.warning .admonition-title {
@@ -20,9 +19,8 @@
   padding: 10px 15px;
   margin: 2em 2em;
   border-radius: 4px;
-  font-family: sans-serif;
     background-color: #36303a;
-    box-shadow: 4px 4px #000000;
+    box-shadow: 8px 8px #000000;
 }
 .admonition.note .admonition-title {
   background-color: #111217; /* 标题黄色 */
@@ -33,13 +31,18 @@
 }
 
 .highlight {
+    /* font */
+    line-height: 1.8rem;
+    font-size: 1.5rem;
+    overflow: auto;
+        /*color: rgb(202, 206, 210);*/
     font-family: 'Pixel Code', Monospaced;
-    font-size: 1.5em;
-    color: rgb(202, 206, 210);
-    background-color: rgb(36, 36, 35);
-    border-radius: 0.3em;
-    border: 5px;
+    /* box */
     padding: 0.5em 1em;
     margin: 2em;
-    overflow: auto;
+    background-color: rgb(36, 36, 35);
+    border-style: dashed;
+    border-width: 4px;
+    border-color: #413a4a;
+    border-radius: 0.3em;
 }
